<resources>
    <string name="app_name">Kino</string>
    <string name="now_playing_item">Now</string>
    <string name="upcoming_item">Upcoming</string>
    <string name="search_item">Search</string>
    <string name="watch_list_item">Watchlist</string>
    <string name="favorite_item">Fav</string>
    <string name="search_tv">Search</string>
    <string name="billboard">Billboard</string>
    <string name="sinopse">Overview</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.

        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
        mollit anim id est laborum.
    </string>

    <string name="duration">Duration:</string>
    <string name="releasedDate">Released date:</string>
    <string name="director">Director:</string>
    <string name="homepage">Homepage:</string>
    <string name="genre">Genre:</string>
    <string name="socialNetworks">Social Networks</string>
    <string name="recommendedmovies">People who liked this also liked</string>
    <string name="similarmovies">Similar Movies</string>
    <string name="title">title</string>
    <string name="movie_info_trailerbutton">Watch Trailer</string>
    <string name="userscore">User Score: </string>
    <string name="asCast">As </string>
    <string name="upcoming_title">Upcoming Movies</string>
    <string name="search_title">Search</string>
    <string name="billboard_title">In Theaters</string>
    <string name="filmography_title">Filmography</string>
    <string name="cast_name">Name</string>
    <string name="bday">27-09-1995</string>
    <string name="place_bday">Denia, Alicante</string>
    <string name="biography_title">Biography</string>
    <string name="hint">Type movie title</string>
    <string name="noreview">Oops, there are no reviews yet</string>
    <string name="poweredbytmdb">Powered by</string>
    <string name="feedback">Send feedback</string>
    <string name="settings">Settings</string>
    <string name="toprated">Top Rated</string>
    <string name="region">Region</string>
    <string name="region_summary">All movies will be searched based on your region</string>
    <string name="cache">Delete cache</string>
    <string name="cache_summary">Cache data will be deleted</string>
    <string name="feedback_summary">Let us know your thoughts about the app.</string>
    <string name="adultContent">Enable adult content</string>
    <string name="adultContent_summary">If enabled it searches also for +18 content</string>
    <string name="setting_toolbar">Settings</string>
    <string name="restartApp">Restart app to update changes</string>
    <string name="deleteCache">Cache deleted</string>
    <string name="sendFeedback">Feedback submitted</string>
    <string name="watchlist_summary">All saved movies will be deleted</string>
    <string name="watchlist">Clear Watchlist</string>
    <string name="watchlist_clear">Watchlist cleared</string>
    <string name="emptyWatchlist">Seems your list is empty</string>
    <string name="noresult">I could not find the movie, sorry!</string>
    <string name="morecategories">More categories</string>
    <string name="grid">Grid</string>
    <string name="see_more">View more</string>
    <string name="view_less">View less</string>
    <string name="no_internet">No internet connection</string>
    <string name="image_transition">image_transition</string>
    <string name="owner_email">ledanny.yang@gmail.com</string>
    <string name="send_email">Send email using:</string>
    <string name="kino_feedback">KINO feedback</string>
    <string name="delete_watchlist">Clear Watchlist</string>
    <string name="delete_sure">Are you sure you want to clear your watchlist?</string>
    <string name="delete_sure_cache">Are you sure you want to clear the cache?</string>
    <string name="delete_cache">Delete cache</string>
    <string name="tip_add">Try long pressing a movie</string>
</resources>
