<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CastDetailActivity">

    <ImageView
        android:id="@+id/cast_detail_portrait"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:srcCompat="@drawable/nophoto"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/filmography_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/cast_detail_portrait"
        android:text="@string/filmography_title"
        android:textSize="@dimen/font_size_verylarge"
        android:padding="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/filmography_title"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <TextView
        android:id="@+id/cast_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cast_name"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_alignParentTop="@id/cast_detail_portrait"
        android:paddingTop="340dp"
        android:paddingLeft="30dp"
        />

    <TextView
        android:id="@+id/cast_detail_bday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bday"
        android:textSize="@dimen/font_size_large"
        android:layout_below="@id/cast_detail_name"
        android:paddingLeft="30dp"/>

    <TextView
        android:id="@+id/cast_detail_place_bday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_bday"
        android:textSize="@dimen/font_size_large"
        android:layout_below="@id/cast_detail_bday"
        android:paddingLeft="30dp"/>


</RelativeLayout>