<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="196dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movie_info_portrait"
                    android:layout_width="0dp"
                    android:layout_height="188dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:srcCompat="@drawable/nophoto" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="18dp"
                    android:paddingLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textSize="@dimen/font_size_medium"/>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textSize="@dimen/font_size_medium"/>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:textSize="@dimen/font_size_medium"/>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/homepage"
                        android:textSize="@dimen/font_size_medium"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/sinopse"
                android:padding ="10dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sinopse_sample"
                android:padding ="10dp"
                android:textSize="@dimen/font_size_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/socialnetwork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/socialNetworks"
                    android:textSize="@dimen/font_size_medium" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/recommendedmovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendedmovies"
                    android:textSize="@dimen/font_size_medium" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/similiarmovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/similarmovies"
                    android:textSize="@dimen/font_size_medium" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>